Fixed bug where description can overflow
See Details screen was hiding overflow so I made the description now wrap.
To prevent use to not see all the other key info, I moved the description to he bottom in case it's too long

--- a/src/styles.css
+++ b/src/styles.css
@@ -277,6 +277,7 @@ body {
 .rowIcon {
   filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7492%) hue-rotate(294deg) brightness(97%) contrast(102%);
   height: 40px;
+  width: 40px;
 }
 
 .rowIcon:hover {
@@ -290,10 +291,10 @@ body {
 
 .addTaskButton {
   position: absolute;
-  top: 81vh;
-  left: 6.5vw;
+  top: 3vh;
+  right: 3vw;
   display: flex;
-  height: 90px;
+  height: 70px;
   z-index: 3;
   filter: brightness(0) saturate(100%) invert(93%) sepia(7%) saturate(0%) hue-rotate(133deg) brightness(106%) contrast(107%);
 }
@@ -321,11 +322,8 @@ body {
   border-radius: 50px;
   padding: 30px 60px;
   z-index: 5;
-  display: grid;
-  grid-template-rows: 1fr 20fr;
-  grid-template-areas: 
-  "exitButton"
-  "textContent";
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
   box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.555);
 }
@@ -334,6 +332,7 @@ body {
   grid-area: exitButton;
   height: 30px;
   margin-left: auto;
+  margin-bottom: 20px;
   filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(259deg) brightness(106%) contrast(106%);
 }
 
@@ -349,12 +348,19 @@ body {
 
 /* See Details Window */
 
-.detailsTextContainer .descText {
-  margin-top: 5vh;
+.detailsTextContainer {
+  overflow: auto;
+  padding-bottom: 3vh;
 }
 
-.detailsTextContainer .completedStatusText {
-  margin-bottom: 3vh;
+.detailsTextContainer .titleText {
+  margin-bottom: 5vh;
+}
+
+.detailsTextContainer .descText {
+  text-wrap: wrap;
+  max-width: 100%;
+  word-break:break-all;
 }
 
 dialog::backdrop {
@@ -434,8 +440,8 @@ dialog:focus {
   font-size: 2.5rem;
   display: flex;
   gap: 80px;
-  margin-top: auto;
-  margin-bottom: 30px;
+  align-items: center;
+  margin-top: 30px;
 }
 
 .button {
